Add HTML and js functionality

--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Random Recipe Generator</title>
+  <title>Sombrero Seleccionador</title>
 </head>
 
 <body>
   <div class="main">
-    <h1>What should I eat today?</h1>
-    <button>Get recipe</button>
-    <div class="recipe"></div>
+    <h1>Sombrero Seleccionador</h1>
+    <p>Haz click para descubrir tu casa de Hogwarts</p>
+    <button class="sorting-btn">Descubre tu casa</button>
+
+    <div class="my-house-container">
+      <p class="my-house-title">Tu casa es</p>
+      <p class="my-house"></p>
+    </div>
   </div>
+
+
+  <script src="main.js"></script>
 </body>
 
 </html>
