Modify styles & refactor js

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Sombrero Seleccionador</title>
 </head>
 
 <body>
   <div class="main">
-    <h1>Sombrero Seleccionador</h1>
-    <p>Haz click para descubrir tu casa de Hogwarts</p>
-    <button class="sorting-btn">Descubre tu casa</button>
+    <h1 class="main-title">Sombrero Seleccionador</h1>
+    <div class="container">
+      <p class="btn-title">Haz click para descubrir a qué casa perteneces</p>
+      <button class="sorting-btn">Haz click</button>
 
-    <div class="my-house-container">
-      <p class="my-house-title">Tu casa es</p>
-      <p class="my-house"></p>
+      <div class="my-house-container">
+        <p class="my-house-title">Tu casa es</p>
+        <p class="my-house"></p>
+      </div>
     </div>
   </div>
 
