--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <button class="sorting-btn">Haz click</button>
 
       <div class="my-house-container">
-        <p class="my-house-title">Tu casa es</p>
-        <p class="my-house"></p>
+        <p class="my-house-text">Tu casa es</p>
+        <p class="my-house-result"></p>
       </div>
     </div>
   </div>
